# calo-analyzer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: streamlit_app.py
docs/: future_features.md  mvp_plan.md  product_spec.md  scientific_assumptions.md
docs/images/: README.md
examples/: sample_calo_data.csv
src/calo_analyzer/: __init__.py  integration.py  processing.py  summaries.py  units.py
tests/: test_integration.py  test_processing.py  test_summaries.py  test_units.py
