[project]
name = "calo-analyzer"
version = "0.1.0"
description = "Isothermal calorimetry data analysis app"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30",
    "pandas>=2.0,<3.0",
    "numpy>=1.24",
    "pyarrow>=18,<20",
    "plotly>=5.18",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
